--- a/index.html
+++ b/index.html
@@ -114,41 +114,48 @@
             <h3>El cafè mai pot faltar en una bona trobada</h3>
             <br />
             <p>
-              Quan arribes a Abu Simbel i et quedes dret mirant els colossos de
-              roca de la façana principal ets fas petit, petit. L'experiència
-              s'ha de viure. La mirada se'n va més enllà de 3.200 anys enrere.
+             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nobis corrupti assumenda aliquam possimus! Neque at quia, saepe debitis facilis voluptates? Doloribus obcaecati dicta itaque animi dignissimos qui blanditiis eveniet?
             </p>
           </div>
           <img src="img/grupo-amigos-bebiendo-cafe.avif" alt="taza caffe" />
         </article>
       </section>
 
-      <!--section opiniones-->
-      <section id="opiniones" class="width-content">
+      <!-- opinions section -->
+
+      <section id="opinions" class="width-content">
+
         <article>
           <h3>Els clients opinen</h3>
-          <div>
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Corrupti
-              minima accusantium ducimus officia doloremque aut, esse impedit
-              iure qui incidunt facilis eaque veritatis dolore quos consectetur
-              voluptatibus repudiandae dignissimos vel.
-            </blockquote>
-            <cite>Juli Cesar</cite>
-            <blockquote>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-              temporibus porro libero suscipit culpa, molestiae rerum dolor
-              facere quaerat quam aliquid aliquam explicabo velit necessitatibus
-              consequuntur cupiditate expedita incidunt tempora.
-            </blockquote>
-            <cite>Livia</cite>
-            <blockquote>
-              Lorem ipsum, dolor sit amet consectetur adipisicing elit. Voluptas
-              illo fugiat tenetur maxime eum illum quia alias quasi, architecto
-              iusto quo perferendis, laboriosam aspernatur officiis excepturi
-              nulla nemo commodi. Error!
-            </blockquote>
-            <cite>Octavi August</cite>
+          <div class="opinions-container">
+            <div class="comment-container">
+              <p class="individual-comment">
+                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                Corrupti minima accusantium ducimus officia doloremque aut, esse
+                impedit iure qui incidunt facilis eaque veritatis dolore quos
+                consectetur voluptatibus repudiandae dignissimos vel.
+              </p>
+              <p class="author-comment">Juli Cesar</p>
+            </div>
+            <div class="comment-container">
+              <p class="individual-comment">
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
+                temporibus porro libero suscipit culpa, molestiae rerum dolor
+                facere quaerat quam aliquid aliquam explicabo velit
+                necessitatibus consequuntur cupiditate expedita incidunt
+                tempora.
+              </p>
+              <p class="author-comment">Livia</p>
+            </div>
+            <div class="comment-container">
+              <p class="individual-comment">
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
+                Voluptas illo fugiat tenetur maxime eum illum quia alias quasi,
+                architecto iusto quo perferendis, laboriosam aspernatur officiis
+                excepturi nulla nemo commodi. Error!
+              </p>
+              <p class="author-comment">Octavi August</p>
+            </div>
           </div>
         </article>
       </section>
