adding the footer

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       </ul>
     </nav>
 
-    <main width-content>
+    <main>
       <!-- section 1 -->
 
       <section id="section-white" class="width-content">
@@ -114,7 +114,10 @@
             <h3>El cafè mai pot faltar en una bona trobada</h3>
             <br />
             <p>
-             Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi nobis corrupti assumenda aliquam possimus! Neque at quia, saepe debitis facilis voluptates? Doloribus obcaecati dicta itaque animi dignissimos qui blanditiis eveniet?
+              Lorem ipsum dolor sit amet consectetur adipisicing elit. Animi
+              nobis corrupti assumenda aliquam possimus! Neque at quia, saepe
+              debitis facilis voluptates? Doloribus obcaecati dicta itaque animi
+              dignissimos qui blanditiis eveniet?
             </p>
           </div>
           <img src="img/grupo-amigos-bebiendo-cafe.avif" alt="taza caffe" />
@@ -124,35 +127,27 @@
       <!-- opinions section -->
 
       <section id="opinions" class="width-content">
-
         <article>
-          <h3>Els clients opinen</h3>
+          <h3><strong> clients opinen</strong></h3>
           <div class="opinions-container">
             <div class="comment-container">
               <p class="individual-comment">
-                Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                Corrupti minima accusantium ducimus officia doloremque aut, esse
-                impedit iure qui incidunt facilis eaque veritatis dolore quos
-                consectetur voluptatibus repudiandae dignissimos vel.
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quia,
+                suscipit?
               </p>
               <p class="author-comment">Juli Cesar</p>
             </div>
             <div class="comment-container">
               <p class="individual-comment">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. Ratione
-                temporibus porro libero suscipit culpa, molestiae rerum dolor
-                facere quaerat quam aliquid aliquam explicabo velit
-                necessitatibus consequuntur cupiditate expedita incidunt
-                tempora.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Hic,
+                numquam.
               </p>
               <p class="author-comment">Livia</p>
             </div>
             <div class="comment-container">
               <p class="individual-comment">
-                Lorem ipsum, dolor sit amet consectetur adipisicing elit.
-                Voluptas illo fugiat tenetur maxime eum illum quia alias quasi,
-                architecto iusto quo perferendis, laboriosam aspernatur officiis
-                excepturi nulla nemo commodi. Error!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                Excepturi, animi.
               </p>
               <p class="author-comment">Octavi August</p>
             </div>
@@ -160,5 +155,84 @@
         </article>
       </section>
     </main>
+    <!-- FOOTER -->
+    <!-- https://blog.hubspot.es/website/como-crear-mailto-html -->
+
+
+    <footer>
+      <!-- Contact -->
+      <div class="footer-div  width-content ">
+        <div class="contacts">
+          <p>Contacte</p>
+          <a href="mailto:info@cafesdelmone.com">info@cafesdelmone.como</a>
+          <div>
+            <img src="logos/facebook.png" alt="Logo de Facebook" />
+            <img src="logos/twitter.png" alt="Logo de Twitter-X" />
+            <img src="logos/instagram.png" alt="Logo d'Instagram" />
+          </div>
+        </div>
+        <!-- LINKS USEFULL -->
+        <section class="hsg-footer__nav-column">
+          <h2 class="hsg-footer__nav-heading">Enllaços utils</h2>
+          <ul>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Notícies de premsa</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> el nostres productes</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Plans per a empreses Afiliats</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Afiliats</a>
+            </li>
+          </ul>
+        </section>
+        <!-- COMPRAR -->
+        <section class="hsg-footer__nav-column">
+          <h2 class="hsg-footer__nav-heading">Comprar</h2>
+          <ul>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Particulars</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Empreses</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Subscripcions</a>
+            </li>
+          </ul>
+        </section>
+
+        <!-- KNOW THE CAFFEE -->
+        <section class="hsg-footer__nav-column">
+          <h2 class="hsg-footer__nav-heading">Conèixer el cafè</h2>
+          <ul>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Videos </a>
+            </li>
+          </ul>
+        </section>
+
+        <!-- HELP -->
+        <section class="hsg-footer__nav-column">
+          <h2 class="hsg-footer__nav-heading">Ajuda</h2>
+          <ul>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Preguntes frequents</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Devolucions</a>
+            </li>
+            <li class="hsg-footer__nav-item">
+              <a class="ga_nav_link" href=""> Servei tecnic</a>
+            </li>
+          </ul>
+        </section>
+      </div>
+    
+    </footer>
+
   </body>
 </html>
