adding some changes

--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
       </article>
     </section>
   </main>
+
   <!-- FOOTER -->
   <!-- https://blog.hubspot.es/website/como-crear-mailto-html -->
 
@@ -168,7 +169,7 @@
       </section>
       <!-- LINKS USEFULL -->
       <section class="footer-section links">
-        <h2 class="hsg-footer__nav-heading">Enllaços utils</h2>
+        <p class="hsg-footer__nav-heading">Enllaços utils</p>
         <ul>
           <li class="hsg-footer__nav-item">
             <a class="ga_nav_link" href=""> Notícies de premsa</a>
@@ -186,7 +187,7 @@
       </section>
       <!-- COMPRAR -->
       <section class="footer-section buys">
-        <h2 class="hsg-footer__nav-heading">Comprar</h2>
+        <p class="hsg-footer__nav-heading">Comprar</p>
         <ul>
           <li class="hsg-footer__nav-item">
             <a class="ga_nav_link" href=""> Particulars</a>
@@ -202,7 +203,7 @@
 
       <!-- KNOW THE CAFFEE -->
       <section class="footer-section know">
-        <h2 class="hsg-footer__nav-heading">Conèixer el cafè</h2>
+        <p class="hsg-footer__nav-heading">Conèixer el cafè</p>
         <ul>
           <li class="hsg-footer__nav-item">
             <a class="ga_nav_link" href=""> Videos </a>
@@ -212,7 +213,7 @@
 
       <!-- HELP -->
       <section class="footer-section help">
-        <h2 class="hsg-footer__nav-heading">Ajuda</h2>
+        <p class="hsg-footer__nav-heading">Ajuda</p>
         <ul>
           <li class="hsg-footer__nav-item">
             <a class="ga_nav_link" href=""> Preguntes frequents</a>
