--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <!-- Etiquetas básicas  -->
   <title>Café</title>
   <link rel="stylesheet" href="css/style.css" />
-  <link rel="shortcut icon" href="logos/favicon.jpg" type="image/x-icon" />
+  <link rel="shortcut icon" href="logos/cafe.svg" type="image/x-icon" />
 </head>
 
 <body>
@@ -51,9 +51,10 @@
         <img src="img/taza_cafe_negro_desde_arriba_600x800.avif" alt="taza caffe" />
         <div>
           <h2>Un cafè deliciós per a totes les ocasions</h2>
-          <br/>
+          <br />
           <p>
-           Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolore ea, sit perferendis suscipit est quos odit atque ipsam provident?
+            Lorem ipsum dolor sit amet consectetur adipisicing elit. Officia dolore ea, sit perferendis suscipit est
+            quos odit atque ipsam provident?
           </p>
         </div>
       </article>
@@ -66,7 +67,8 @@
           <h2>Café natural i sostenible</h2>
           <br />
           <p>
-           Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam reprehenderit nisi veniam reiciendis ullam asperiores voluptatem alias odit vel consectetur?
+            Lorem ipsum dolor sit amet, consectetur adipisicing elit. Quibusdam reprehenderit nisi veniam reiciendis
+            ullam asperiores voluptatem alias odit vel consectetur?
           </p>
         </div>
         <img src="img/natural_600x750.avif" alt="taza caffe" />
@@ -85,7 +87,8 @@
           <h2>Prepara un deliciós cafè a casa</h2>
           <br />
           <p>
-            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique alias voluptates ratione repellat natus odio itaque labore repudiandae iusto sint!
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Similique alias voluptates ratione repellat natus
+            odio itaque labore repudiandae iusto sint!
           </p>
         </div>
       </article>
@@ -101,7 +104,8 @@
           <h2>El cafè mai pot faltar en una bona trobada</h2>
           <br />
           <p>
-           Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam atque minima iste distinctio sequi soluta beatae, incidunt illum ullam nisi.
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit. Numquam atque minima iste distinctio sequi soluta
+            beatae, incidunt illum ullam nisi.
           </p>
         </div>
         <img src="img/grupo-amigos-bebiendo-cafe.avif" alt="taza caffe" />
@@ -160,7 +164,7 @@
     <article class="footer-container width-content">
       <section class="footer-section contacts">
         <p class="hsg-footer__nav-heading">Contacte</p>
-        <a href="mailto:info@cafesdelmon.com">info@cafesdelmone.como</a>
+        <a  class="format-link" href="mailto:info@cafesdelmon.com">info@cafesdelmone.como</a>
         <div class="logos">
           <img src="logos/facebook.png" alt="Logo de Facebook" />
           <img src="logos/twitter.png" alt="Logo de Twitter-X" />
